refactor: move integrations back to FFAPI